Clear setup V20 LightAttack, HeavyAttack, Sprawl, ArmDrag, ShoulderPop

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -23,8 +23,10 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Action.HandFight.LoseStruggle",DevComment="")
 +GameplayTagList=(Tag="Action.HandFight.WinStruggle",DevComment="")
 +GameplayTagList=(Tag="Action.HandFight.WristGrab",DevComment="")
++GameplayTagList=(Tag="Action.Neutral.Attack.HeavyAttack",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.LeftHeavy",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.LeftLight",DevComment="")
++GameplayTagList=(Tag="Action.Neutral.Attack.LightAttack",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.RightHeavy",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Attack.RightLight",DevComment="")
 +GameplayTagList=(Tag="Action.Neutral.Dash",DevComment="")
