--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -42,6 +42,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Counter.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Counter.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reacion.Attacker.HandFight",DevComment="")
++GameplayTagList=(Tag="Reaction",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.ArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.Breakdown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.HandFight",DevComment="")
