Need check stuck on setup Struggle

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=BatsToiSupreme
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/_BatstoiRefactor/Maps/LV_Lobby.LV_Lobby
+EditorStartupMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 GameDefaultMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 TransitionMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 bUseSplitscreen=False
