Update config GameplayTags

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -64,6 +64,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Attacker.RightTopBottomIdle",DevComment="")
 +GameplayTagList=(Tag="Reaction.HandFight.ArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Neutral.ShoulderPop",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.ArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.Breakdown",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.DisengageA",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.DisengageR",DevComment="")
