WIP setup WinStruggle_HandFight, LoseStruggle_HandFight - Part2

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -62,6 +62,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Attacker.RightArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.RightHipHeistToStand",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.RightTopBottomIdle",DevComment="")
++GameplayTagList=(Tag="Reaction.Attacker.StruggleEnd.HandFight",DevComment="")
 +GameplayTagList=(Tag="Reaction.HandFight.ArmDrag",DevComment="")
 +GameplayTagList=(Tag="Reaction.Neutral.ShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.ArmDrag",DevComment="")
@@ -87,6 +88,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Receiver.RightShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.RightTopBottomIdle",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.ShoulderPop",DevComment="")
++GameplayTagList=(Tag="Reaction.Receiver.StruggleEnd.HandFight",DevComment="")
 +GameplayTagList=(Tag="Special.DrainedOut",DevComment="")
 +GameplayTagList=(Tag="Special.Miss",DevComment="")
 +GameplayTagList=(Tag="Stamina.Recovery",DevComment="")
