--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -89,6 +89,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Reaction.Receiver.RightTopBottomIdle",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.ShoulderPop",DevComment="")
 +GameplayTagList=(Tag="Reaction.Receiver.StruggleEnd.HandFight",DevComment="")
++GameplayTagList=(Tag="Reaction.Special.CancelAction",DevComment="")
++GameplayTagList=(Tag="Reaction.Special.CancelBothAnimation",DevComment="")
 +GameplayTagList=(Tag="Special.DrainedOut",DevComment="")
 +GameplayTagList=(Tag="Special.Miss",DevComment="")
 +GameplayTagList=(Tag="Stamina.Recovery",DevComment="")
