--- a/BatsToiSupreme_Real.uproject
+++ b/BatsToiSupreme_Real.uproject
@@ -90,6 +90,10 @@
 		{
 			"Name": "GameLiftServerSDK",
 			"Enabled": true
-		}
+		},
+    		{
+      			"Name": "WebBrowserWidget",
+      			"Enabled": true
+    		}
 	]
 }
