--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -145,20 +145,23 @@ TitleStorageReadChunkLength=0
 +AuthScopeFlags=BasicProfile
 +AuthScopeFlags=FriendsList
 +AuthScopeFlags=Presence
-bUseEAS=False
-bUseEOSConnect=False
+bUseEAS=True
+bUseEOSConnect=True
 bMirrorStatsToEOS=False
 bMirrorAchievementsToEOS=False
 bUseEOSSessions=False
 bMirrorPresenceToEAS=False
 
-[OnlineSubsystemEOSPlus]
+[OnlineSubsystemEOS]
 bEnabled=true
 
 [OnlineSubsystem]
-DefaultPlatformService=EOSPlus
+DefaultPlatformService=EOS
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEOS.NetDriverEOS",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+ 
 
 [/Script/OnlineSubsystemUtils.OnlineEngineInterfaceImpl]
 +CompatibleUniqueNetIdTypes=EOS
-+CompatibleUniqueNetIdTypes=EOSPlus
 
