WIP: Server travel

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@ GameName=BatsToiSupreme
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/_BatstoiRefactor/Maps/LV_Lobby.LV_Lobby
 GameDefaultMap=/Game/_BatstoiRefactor/Maps/LV_Lobby.LV_Lobby
-TransitionMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
+TransitionMap=/Game/_BatstoiRefactor/Maps/LV_Transition.LV_Transition
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTMultiGameMode_Combo.BP_BTMultiGameMode_Combo_C
 GlobalDefaultServerGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTMultiGameMode.BP_BTMultiGameMode_C
 bOffsetPlayerGamepadIds=True
-ServerDefaultMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
+ServerDefaultMap=/Game/_BatstoiRefactor/Maps/LV_Lobby.LV_Lobby
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
