Fix bug: The character's movement does not replicate on the other client side

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -127,3 +127,6 @@ MaxSubsteps=12
 MaxClientRate=80000
 MaxInternetClientRate=80000
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
+
