Load game Local

--- a/BatsToiSupreme_Real.uproject
+++ b/BatsToiSupreme_Real.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.2",
+	"EngineAssociation": "{3AF510E4-4E06-66D5-760A-B5868AF94704}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
