--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTMultiGameMode_Combo.BP_BTMultiGameMode_Combo_C
 GlobalDefaultServerGameMode=/Game/_BatstoiRefactor/Blueprints/GameModes/BP_BTMultiGameMode.BP_BTMultiGameMode_C
 bOffsetPlayerGamepadIds=True
-ServerDefaultMap=/Game/_BatstoiRefactor/Maps/LV_LobbyServer.LV_LobbyServer
+ServerDefaultMap=/Game/_BatstoiRefactor/Maps/LVMap_TimeSquare_Multi.LVMap_TimeSquare_Multi
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
@@ -131,7 +131,7 @@ MaxInternetClientRate=80000
 
 [/Script/OnlineSubsystemEOS.EOSSettings]
 CacheDir=CacheDir
-DefaultArtifactName=Tekfall Supreme Dev
+DefaultArtifactName=DedicatedServerDev
 TickBudgetInMilliseconds=0
 bEnableOverlay=True
 bEnableSocialOverlay=True
