Update 54 ability and check HandFightIdle

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -41,6 +41,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="CD.Ability.Jump",DevComment="")
 +GameplayTagList=(Tag="Counter.LeftArmDrag",DevComment="")
 +GameplayTagList=(Tag="Counter.RightArmDrag",DevComment="")
++GameplayTagList=(Tag="Event.Trigger.Attacker.HandFightIdle",DevComment="")
++GameplayTagList=(Tag="Event.Trigger.Receiver.HandFightIdle",DevComment="")
 +GameplayTagList=(Tag="Reacion.Attacker.HandFight",DevComment="")
 +GameplayTagList=(Tag="Reaction",DevComment="")
 +GameplayTagList=(Tag="Reaction.Attacker.ArmDrag",DevComment="")
