Update check TopBottomIdle, add CancelReAction_TopBottomIdle Ability

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -200,6 +200,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Trigger.Receiver.StruggleEnd.RightHighC",DevComment="")
 +GameplayTagList=(Tag="Trigger.Receiver.Underhook",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelAction",DevComment="")
++GameplayTagList=(Tag="Trigger.Special.CancelActionTopBottomIdle",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBoth",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBothAnimation",DevComment="")
 +GameplayTagList=(Tag="Trigger.Special.CancelBothAnimationTopBottomIdle",DevComment="")
