Fixed build errors

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -29,7 +29,7 @@ bPreventGlobalDataInitialization=True
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=BatsToiSupreme_Real
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -71,7 +71,7 @@ InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
-bCookAll=True
+bCookAll=False
 bCookMapsOnly=False
 bSkipEditorContent=False
 bSkipMovies=False
