Full rebuild = false

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -29,7 +29,7 @@ bPreventGlobalDataInitialization=True
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=BatsToiSupreme_Real
-FullRebuild=True
+FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
