--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ BuildServer/*
 WindowsServer/*
 BuildClient/*
 Windows/
+LinuxServer/*
 
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
 !Build/*/
