--- a/BatsToiSupreme_Real.uproject
+++ b/BatsToiSupreme_Real.uproject
@@ -49,6 +49,10 @@
 			"Enabled": true
 		},
 		{
+            "Name": "GameplayAbilities",
+            "Enabled": true
+        },
+		{
 			"Name": "CommonUI",
 			"Enabled": true
 		},
